# OpenShell-Community

./: .gitattributes  CONTRIBUTING.md  README.md  TRAITS.md
.cursor/rules/: wsl-docker-windows.mdc
.github/workflows/: build-sandboxes.yml
brev/: launch-plugin.sh  launch.sh
brev/nemoclaw-plugin/: README.md  print-openclaw-url.sh  run-plugin-install.sh  settings.json
brev/nemoclaw-ui-extension/: uninstall.sh
brev/welcome-ui/: app.js  server.js  server.py
sandboxes/base/: Dockerfile  README.md  policy.yaml
sandboxes/capability-ratchet/: Cargo.toml  Dockerfile  README.md  policy.yaml  ratchet-config.yaml  ratchet-policy.yaml  ratchet-start.sh
sandboxes/capability-ratchet/src/: bash_ast.rs  bash_unwrap.rs  config.rs  constants.rs  error.rs  known_safe.rs  lib.rs  main.rs  normalize.rs  policy.rs  proxy.rs  reversibility.rs  revocation.rs  sandbox.rs  server.rs  taint.rs  tool_analysis.rs  types.rs
sandboxes/capability-ratchet/tests/: test_policy.rs  test_revocation.rs
sandboxes/capability-ratchet/tests/common/: mod.rs
sandboxes/cursor-desktop/: Dockerfile  README.md  cursor_openshell_community_design_v2.md  healthcheck.sh  policy.yaml  startup.sh
sandboxes/droid/: Dockerfile  README.md  policy.yaml
sandboxes/nemoclaw/: Dockerfile  build.sh  nemoclaw-start.sh  policy-proxy.js  policy.yaml
sandboxes/ollama/: Dockerfile  README.md  entrypoint.sh  policy.yaml  update-ollama.sh
sandboxes/openclaw/: Dockerfile  README.md  openclaw-slack-manifest.yaml  openclaw-start.sh  openclaw-ws-proxy-patch.js  policy.yaml
sandboxes/pi-agent/: Dockerfile  README.md  (+2 more)
(+60 files in other folders)
